<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="logo_subtitle">Find a nice restaurant and invite your co-workers for lunch</string>
    <string name="facebook_application_id" translatable="false">2955815731344333</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2955815731344333</string>

    <string name="login_canceled">Login Canceled \n You must sign in to access the app content</string>
    <string name="login_failed_network_error">Login Failed \n Your device is not connected to internet, please connect it and retry.</string>
    <string name="login_failed_unknown_error">Login Failed \n An error occurred while authentication process, please retry.</string>

    <string name="retry_login_btn_txt">Retry</string>
    <string name="facebook_login_btn_txt">Sign in with Facebook</string>
    <string name="google_login_btn_txt">Sign in with Google</string>

    <string name="map_string">Map</string>
    <string name="restaurants_list" translatable="false">Restaurants</string>
    <string name="workmates_string">Workmates</string>
    <string name="conversations_string" translatable="false">Conversations</string>
    <string name="search_a_restaurant_btn_txt">Search a restaurant</string>
    <string name="drawer_your_lunch_txt">Your lunch</string>
    <string name="settings_txt">Settings</string>
    <string name="logout_txt">Logout</string>
    <string name="find_a_restaurant_title">Find a restaurant</string>
    <string name="available_workmates_title">Available workmates</string>
    <string name="my_conversations_title">My conversations</string>
    <string name="chat_title" translatable="false">Chat</string>

    <string name="rational_location_request_msg">To display nearby restaurants, allow Go4Lunch to access your Location.</string>
    <string name="when_location_permission_denied">"If you continue without allowing the location permission, nearby restaurants will not be displayed neither on the map nor in the restaurants list.     "</string>
    <string name="allow_location_permission">continue</string>
    <string name="not_now_txt">not now</string>
    <string name="continue_without_permission">continue without permission</string>
    <string name="allow_location_permission_1">allow</string>
    <string name="restaurant_photo_description">The restaurant photo</string>
    <string name="meter">meter</string>
    <string name="restaurant_status_open">Open</string>
    <string name="restaurant_status_closed">Closed</string>
    <string name="search_restaurants_hint">Search restaurant</string>
    <string name="user_choice_state">User choice for this restaurant state</string>
    <string name="call_text">CALL</string>
    <string name="like_text">LIKE</string>
    <string name="website_text">WEBSITE</string>
    <string name="workmate_is_joining">%1$s is joining!</string>
    <string name="is_eating_at_txt">%1$s is eating at</string>
    <string name="has_not_decided_yet_txt">%1$s hasn\'t decided yet</string>
    <string name="workplace_search_field_hint">Type you workplace name/address</string>
    <string name="workplace_picker_title">Select your workplace</string>
    <string name="workplace_picker_tag">Workplace Picker</string>
    <string name="workplace_required_message_restaurant_details">Select your workplace to see your workmates that are joining this restaurant</string>
    <string name="select_my_workplace_btn">Select my workplace</string>
    <string name="workplace_required_message">Select your workplace to see you workmates</string>
    <string name="order_restaurant_list">Sort Restaurant list</string>
    <string name="order_by_stars">Sort by stars</string>
    <string name="order_by_nearest">Sort by nearest</string>
    <string name="order_by_workmates_count">Sort by workmates count</string>
    <string name="in_brackets" translatable="false">(%1$d)</string>
    <string name="restaurant_not_chosen_yet">You have not chosen your restaurant yet!</string>
    <string name="lunch_reminder_time">Lunch reminder time</string>
    <string name="delete_account_btn_txt">Delete my account</string>
    <string name="ask_account_deletion_confirmation">This action will permanently delete your account and all data related to it.\nDo you want to continue?</string>
    <string name="account_deletion_confirmation">Your account and all your data have been successfully deleted.</string>
    <string name="account_deletion_failed_msg">An error occurred while deleting your account, please log out, log back in, and try again.</string>
    <string name="lunch_time_notification_title">It\'s lunch time!</string>
    <string name="lunch_time_notification_msg_with_workmates">%1$s, its time for your lunch at %2$s (%3$s) with %4$s.</string>
    <string name="lunch_time_notification_msg">%1$s, its time for your lunch at %2$s (%3$s), unfortunately you go alone today 😞.</string>
    <string name="notification_channel_description">This notification will be displayed every day at the time you have set in settings.</string>
    <string name="workplace_selection_success_msg">Your workplace is now %1$s.</string>
    <string name="account_txt">Account</string>
    <string name="my_workplace_txt">My workplace</string>
    <string name="toggle_notification">Enable notification</string>
    <string name="delete_confirmation_dialog_TAG" translatable="false">Account deletion confirmation dialog</string>
    <string name="time_preference_dialog_TAG" translatable="false">The time preference picker dialog</string>
    <string name="delete_confirmation_dialogue_title">Are you sure?</string>
    <string name="cancel_txt">Cancel</string>
    <string name="delete_txt">Delete</string>
</resources>