...
    <item
        android:id="@+id/user_lunch"
        android:icon="@drawable/ic_meals_24"
        android:title="@string/drawer_your_lunch_txt"/>

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings_txt"/>

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout_24"
...
